[tool.poetry]
name = "ptop"
version = "0.1.0"
description = ""
authors = ["yunpeng.zhan <136688059@qq.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.0.0"
Flask-Bootstrap = "^3.3.7"
Flask-Mail = "^0.9.1"
Flask-Script = "^2.0.6"
Flask-SQLAlchemy = "^2.5.1"
Flask-Moment = "^1.0.1"
celery = "^5.1.2"
flask-migrate = "^2.5.3"
flask-login = "^0.5.0"
redis = "^3.5.3"
flask-wtf = "^0.15.1"
oss2 = "^2.14.0"
flask-script = "^2.0.6"
email-validator = "^1.1.3"
psycopg2-binary = "^2.9.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
mypy = "^0.910"
black = "^21.6b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "ali"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[tool.black]
line-length = 79
target-version = ['py37']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 79 
