[tool.poetry]
authors = ["yunpeng.zhan <136688059@qq.com>"]
description = ""
name = "ptop"
version = "0.1.0"

[tool.poetry.dependencies]
Flask = "^1.0.0"
Flask-Bootstrap = "^3.3.7"
Flask-Mail = "^0.9.1"
Flask-Moment = "^1.0.1"
Flask-SQLAlchemy = "^2.5.1"
Flask-Script = "^2.0.6"
celery = "^5.1.2"
email-validator = "^1.1.3"
flask-caching = "^1.10.1"
flask-login = "^0.5.0"
flask-migrate = "^2.5.3"
flask-script = "^2.0.6"
flask-wtf = "^0.15.1"
oss2 = "^2.14.0"
psycopg2-binary = "^2.9.1"
python = "^3.8"
redis = "^3.5.3"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
flake8 = "^3.9.2"
mypy = "^0.910"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[[tool.poetry.source]]
default = true
name = "ali"
url = "https://mirrors.aliyun.com/pypi/simple/"

[tool.black]
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
include = '\.pyi?$'
line-length = 79
target-version = ['py37']

[tool.isort]
line_length = 79
multi_line_output = 3
profile = "black"
